--- a/Vanp.Web/Views/Shared/_Layout.cshtml
+++ b/Vanp.Web/Views/Shared/_Layout.cshtml
@@ -24,7 +24,9 @@
     <link href='https://fonts.googleapis.com/css?family=Raleway:400,300,600,500,700,800' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700" rel="stylesheet">
 
-    @RenderSection("css", required: false)
+
+    @RenderSection("style", required: false)
+
 </head>
 <body>
     <div id="page">
@@ -625,7 +627,7 @@
     <script type="text/javascript" src="~/Scripts/common.js"></script>
     <script type="text/javascript" src="~/Scripts/owl.carousel.min.js"></script>
     <script type="text/javascript" src="~/Scripts/jquery.mobile-menu.min.js"></script>
-    <script src="~/Scripts/cloud-zoom.js"></script>
+
     <script src="~/Scripts/jquery.blockUI.js"></script>
     <script src="~/Scripts/ladda/spin.min.js"></script>
     <script src="~/Scripts/ladda/ladda.min.js"></script>
