--- a/Vanp.Web/Areas/Customer/Views/Product/Insert.cshtml
+++ b/Vanp.Web/Areas/Customer/Views/Product/Insert.cshtml
@@ -10,7 +10,7 @@
         }
     </style>
 }
-<form method="post" action="account/product/insert" class="insert-form" enctype="multipart/form-data">
+<form method="post" action="/account/product/insert" class="insert-form" enctype="multipart/form-data">
     <div class="row">
         <div class="form-group col-md-4">
             <label for="productname">Tên sản phẩm <span class="lie">*</span></label>
@@ -52,7 +52,7 @@
         </div>
     </div>
     <div class="form-group">
-        <label for="producttext">Mô tả chi tiết:</label>
+        <label for="producttext">Mô tả chi tiết:</l abel>
         <textarea name="ProductText"></textarea>
     </div>
     <button type="submit" class="btn btn-default">Đăng bán</button>
