--- a/Vanp.Web/Content/style.css
+++ b/Vanp.Web/Content/style.css
@@ -2146,6 +2146,11 @@ ul#cart-sidebar {
 	padding-top: 0px;
 	padding-bottom: 4px;
 }
+.products-list .product-bottom{
+    position: absolute;
+    bottom: 20px;
+}
+
 .mini-products-list .product-image {
 	float: left;
 	padding: 0;
@@ -6661,6 +6666,7 @@ li .list {
 .separator {
 	color: #999
 }
+
 .products-list .product-image {
 	float: left;
 	width: 28%;
@@ -7018,6 +7024,11 @@ a.button.detail-bnt span {
 	white-space: nowrap;
 	color: #666;
 	display: none;
+}
+.price-current{
+    color: #e33b3f;
+    font-weight:700;
+    font-size: 14px;
 }
 .latest-product .special-price .price-label {
 	display: none;
@@ -25769,18 +25780,30 @@ ol.products-list {
 	padding: 0;
 	margin: 0;
 	float: left;
+
 }
 li .list {
 	border-bottom: none;
 }
+.products-list .item{
+    	position:relative;
+}
 .products-list .ratings {
 	/*border-bottom: 1px #e5e5e5 solid;*/
-	padding: 0px 0px 10px 0px;
+	padding: 0px 0px 5px 0px;
 	position: relative;
 	margin: 0px;
 	left: 0;
 	bottom: auto;
 	border-radius: 0;
+}
+.products-list .categories {
+	/*border-bottom: 1px #e5e5e5 solid;*/
+	margin: 0px;
+	left: 0;
+	bottom: auto;
+	border-radius: 0;
+	font-size:12px
 }
 .products-list .old-price .price {
 	font-size: 15px
@@ -25790,14 +25813,14 @@ li .list {
 }
 .products-list .product-image {
 	float: left;
-	width: 28%;
+	width: 20%;
 }
 .products-list .product-image img {
 	width: 100%;
 }
 .products-list .product-shop {
 	float: right;
-	width: 69%;
+	width: 77%;
 	text-align: left;
 	margin-left: 20px;
 }
@@ -25808,7 +25831,7 @@ li .list {
 	color: #222;
 }
 .products-list .product-shop p {
-	font-size: 14px;
+	font-size: 12px;
 	color: #222;
 	line-height: 1.6em;
 	display: block;
@@ -25835,6 +25858,11 @@ li .list {
 }
 .products-list .add-to-links {
 	padding-left: 2px;
+}
+.products-list .actions{
+    position:absolute;
+    bottom:20px;
+    right:0;
 }
 .add-to-links span {
 	font-size: 12px;
@@ -26048,7 +26076,7 @@ a.button.detail-bnt span {
 }
 /* Price */
 .price {
-	font-size: 14px;
+	font-size: 13px;
 	color: #333;
 	white-space: nowrap !important;
 }
