--- a/Vanp.Web/Areas/Customer/Views/Product/ListProduct.cshtml
+++ b/Vanp.Web/Areas/Customer/Views/Product/ListProduct.cshtml
@@ -1,8 +1,42 @@
 ﻿
 @{
     ViewBag.Title = "ListProduct";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Areas/Customer/Views/Shared/_CustomerLayout.cshtml";
 }
 
-<h2>ListProduct</h2>
+<div class="table-responsive">
+    <table class="table product-table">
+        <thead>
+            <tr>
+                <th></th>
+                <th>Tên sản phẩm</th>
+                <th>Giá</th>
+                <th>Giá bán ngay</th>
+                <th>Ngày đăng</th>
+                <th>Ngày hết hạn</th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <th scope="row">
+                    <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Products/shoes.jpg" alt="" class="img-fluid" width="100" height="100">
+                </th>
+                <td>
+                    <h5><strong>Sportswear</strong></h5>
+                    <p class="text-muted">by FifeSteps</p>
+                </td>
+                <td>100000000</td>
+                <td>38</td>
+                <td>200 $</td>
+                <td>200 $</td>
+                <td>
+                    <button type="button" class="btn btn-sm btn-primary" data-toggle="tooltip" data-placement="top" title="Remove item">
+                        X
+                    </button>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</div>
 
