--- a/Vanp.Web/Views/Product/Products.cshtml
+++ b/Vanp.Web/Views/Product/Products.cshtml
@@ -72,7 +72,7 @@
                                         <li class="item">
                                             <div class="product-image"> <a href="product_detail.html" title="product lapen casen"> <img class="small-image" src="~/images/products/product1.jpg" alt="product lapen casen"> </a> </div>
                                             <div class="product-shop">
-                                                <div class="row">
+                                                <div class="row product-top">
                                                     <div class="col-md-6">
                                                         <h2 class="product-name"><a href="product_detail.html" title="HTC Rhyme Sense">Natrina Round</a></h2>
                                                         <div class="desc std">
@@ -91,7 +91,7 @@
                                                                 <span class="bid-count">3</span>
                                                             </div>
                                                             <div class="col-md-4">
-                                                                <span class="end-date"> 5 ngày</span>
+                                                                <span class="end-time"> 5 ngày</span>
                                                             </div>
                                                         </div>
                                                     </div>
