--- a/Vanp.Web/Views/Shared/_Layout.cshtml
+++ b/Vanp.Web/Views/Shared/_Layout.cshtml
@@ -622,6 +622,7 @@
 
     <script type="text/javascript" src="~/Scripts/jquery.min.js"></script>
     <script src="~/Scripts/moment/moment.min.js"></script>
+    <script src="~/Scripts/numeral/numeral.js"></script>
     <script src="~/Scripts/bootstrap/dist/bootstrap.min.js"></script>
     <script type="text/javascript" src="~/Scripts/revslider.js"></script>
     <script type="text/javascript" src="~/Scripts/common.js"></script>
