--- a/Vanp.Web/Areas/Customer/Views/Product/Update.cshtml
+++ b/Vanp.Web/Areas/Customer/Views/Product/Update.cshtml
@@ -35,7 +35,9 @@
     <div class="row">
         <div class="form-group col-md-4">
             <label for="categoryid">Danh mục</label>
-            @Html.DropDownList("CategoryId", Html.GetNameCat(), new { @class = "col-md-4 form-control", @name = "CategoryId" })
+            <select>
+                <option></option>
+            </select>
         </div>
     </div>
     <div class="row">
