--- a/Vanp.Web/Areas/Customer/Views/Product/ListProduct.cshtml
+++ b/Vanp.Web/Areas/Customer/Views/Product/ListProduct.cshtml
@@ -48,7 +48,7 @@
                         <h5><strong>@item.DateTo</strong></h5>
                     </td>
                     <td>
-                        <a href="" class="btn btn-primary" title="Edit">
+                        <a href="/account/product/update/@item.Id" class="btn btn-primary" title="Edit">
                             <i class="fa fa-pencil" aria-hidden="true"></i>
                         </a>
                     </td>
