--- a/Vanp.Web/Areas/Customer/Views/Product/Update.cshtml
+++ b/Vanp.Web/Areas/Customer/Views/Product/Update.cshtml
@@ -33,12 +33,12 @@
             <input type="text" name="Price" class="form-control" id="price" value="@Model.Price">
         </div>
     </div>
-    <div class="row">
+    @*<div class="row">
         <div class="form-group col-md-4">
             <label for="categoryid">Danh mục</label>
-            <input type="text" name="Price" class="form-control" id="price" value="@Model.Category.CategoryName">
+            <input type="text" name="Price" class="form-control" id="price">
         </div>
-    </div>
+    </div>*@
     <div class="row">
         <div class="form-group col-md-4">
             <label for="image1">Hình ảnh 1 </label><br />
