--- a/Vanp.Web/Areas/Customer/Views/Product/Update.cshtml
+++ b/Vanp.Web/Areas/Customer/Views/Product/Update.cshtml
@@ -39,12 +39,10 @@
             <label for="categoryid">Danh mục</label>
             <select>
                 <option>
-                    @*@if (Model.Category != null)
+                    @if (Model.Category != null)
                     {
                         @Model.Category.CategoryName
-                    }*@
-
-                    @Model.CategoryId
+                    }
                 </option>
             </select>
 
