--- a/Vanp.Web/Views/Product/Products.cshtml
+++ b/Vanp.Web/Views/Product/Products.cshtml
@@ -50,7 +50,7 @@
                                 </div>
                                 <div class="toolbar">
                                     <div class="sorter">
-                                        <div class="view-mode"> <span title="Grid" class="button button-active button-grid">&nbsp;</span><a href="assets/list.html" title="List" class="button-list">&nbsp;</a> </div>
+                                        <div class="view-mode"> <a class="button button-grid" title="Grid" href="left_bar.html">&nbsp;</a><span class="button button-active button-list" title="List">&nbsp;</span> </div>
                                     </div>
                                     <div id="sort-by">
                                         <label class="left">Sort By: </label>
@@ -103,12 +103,12 @@
                                                             <p class="rating-links"><b>Người đăng</b> : <a> <span class="created-by">abcxs</span></a> <span class="separator">|</span> <b>Người giữ giá : </b><a><span class="bid-current-by">ạhk</span></a> </p>
                                                         </div>
                                                         <div class="categories">
-                                                            <div class="category-links">Danh mục : <a>abcxs</a> <span class="separator">></span> <a>aa</a></div>
+                                                            <div class="category-links">Danh mục : <span> </span></div>
                                                         </div>
                                                     </div>
                                                 </div>
                                                 <div class="actions">
-                                                    <button type="submit" title="Submit" class="button button-wishlist"><span>Whishlist</span></button>
+                                                    <button type="submit" title="Submit" class="button button-wishlist"><span>Yêu Thích</span></button>
                                                 </div>
                                             </div>
                                         </li>
