--- a/Vanp.Web/Content/style.css
+++ b/Vanp.Web/Content/style.css
@@ -25790,6 +25790,9 @@ li .list {
 .products-list .item{
     	position:relative;
 }
+.products-list .item.new{
+   background:aliceblue;
+}
 .products-list .ratings {
 	/*border-bottom: 1px #e5e5e5 solid;*/
 	padding: 0px 0px 5px 0px;
