--- a/Vanp.Web/Views/Shared/_LoginPartial.cshtml
+++ b/Vanp.Web/Views/Shared/_LoginPartial.cshtml
@@ -36,41 +36,7 @@ else
     <div class="top-cart-contain pull-right">
         <!-- Top Cart -->
         <div class="mini-cart">
-            <div data-toggle="dropdown" data-hover="dropdown" class="basket dropdown-toggle"> <a href="../shopping_cart.html"> <i class="fa fa-shopping-cart" aria-hidden="true"></i> </a> </div>
-            <div>
-                <div class="top-cart-content">
-
-                    <!--block-subtitle-->
-                    <ul class="mini-products-list" id="cart-sidebar">
-                        <li class="item first">
-                            <div class="item-inner">
-                                <a class="product-image" title="products" href="#l"><img alt="products" src="~/images/products/product4.jpg"> </a>
-                                <div class="product-details">
-                                    <div class="access"><a class="btn-remove1" title="Remove This Item" href="#">Remove</a> <a class="btn-edit" title="Edit item" href="#"><i class="icon-pencil"></i><span class="hidden">Edit item</span></a> </div>
-                                    <!--access--><strong>1</strong> x <span class="price">$179.99</span>
-                                    <p class="product-name"><a href="#">Study Table...</a> </p>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="item last">
-                            <div class="item-inner">
-                                <a class="product-image" title="Epson L360 Printer" href="../product_detail.html"><img alt="Epson L360 Printer" src="~/images/products/product3.jpg"> </a>
-                                <div class="product-details">
-                                    <div class="access"><a class="btn-remove1" title="Remove This Item" href="#">Remove</a> <a class="btn-edit" title="Edit item" href="#"><i class="icon-pencil"></i><span class="hidden">Edit item</span></a> </div>
-                                    <!--access--><strong>1</strong> x <span class="price">$80.00</span>
-                                    <p class="product-name"><a href="#">Arm Chair...</a> </p>
-                                </div>
-                            </div>
-                        </li>
-                    </ul>
-
-                    <!--actions-->
-                    <div class="actions">
-                        <button class="btn-checkout" title="Checkout" type="button"><span>Checkout</span> </button>
-                        <a href="../shopping_cart.html" class="view-cart"><span>View Cart</span></a>
-                    </div>
-                </div>
-            </div>
+            <div class="basket"> <a href="/account/wishlist" title="Danh sách yêu thích"> <i class="fa fa-heart" aria-hidden="true"></i> </a> </div>
         </div>
         <!-- Top Cart -->
         <div id="ajaxconfig_info" style="display:none">
